--- a/src/Counter/counter/index.css
+++ b/src/Counter/counter/index.css
@@ -1,6 +1,15 @@
-.counter{
+.CounterApp{
+    display: flex;
+    justify-content: space-around;
+    background-color: aliceblue;
     
+}
+.counter{
+    display: flex;
     align-items: center;
+    justify-content: space-between;
+    border:1px solid black;
+    width: 500px;
    
 }
 .counter h1 {
@@ -12,15 +21,6 @@
     background-color: blue;
     border-radius: 50%;
 }
- .borderValue{
-    
-    width: 300px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-}
-
 .CounterApp input {
     margin: 5px;
     font-size: 18px;
@@ -34,4 +34,17 @@
 }
 .CounterApp button:active{
     background-color: yellow;
+}
+.valueInput{
+    justify-content: space-between;
+    width: 300px;
+    display: flex;
+    border: 1px solid black;
+}
+
+.borderValue{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 200px;
 }
